src/components/Asset/AssetActions/Download/index.module.css
.consume {
  width: auto;
  display: flex;
  flex-direction: column;
  gap: var(--sp-8);
}

.tighterStack {
  gap: var(--sp-2);
}

.consume :global([class*='FormInput_field']) {
  margin-bottom: 0;
}

.consume :global([class*='FormInput_field']:has([type='checkbox']):last-child) {
  margin-bottom: 0;
}

.buttonContainer {
  display: flex;
  justify-content: flex-start;
  margin-top: 16px;
}

.info {
  display: flex;
  width: auto;
}

.priceWrapper > div {
  justify-content: first baseline;
}

.priceWrapper > div:last-of-type {
  margin-bottom: 0;
}

.filewrapper {
  flex-shrink: 0;
}

.consumerParameters > div {
  margin-top: var(--spacer);
  border-bottom: none;
}

.price {
  align-self: center;
}

.feedback {
  width: 100%;
  margin-top: calc(var(--spacer));
}

.buttonBuy > div {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.buttonBuy > div > button {
  margin-left: auto;
  margin-right: auto;
}

.calculation {
  min-width: 12rem;
}

.timeout {
  display: block;
  text-align: right;
  font-size: var(--font-size-mini);
  color: var(--color-secondary);
}

.calculation .price {
  font-size: var(--font-size-small) !important;
}

.marginBottom {
  margin-bottom: var(--sp-8);
}

